--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     stages {
-        stage('Checkout') {
+        stage('Check') {
             steps {
                 git url: 'https://github.com/Lavanya0619/simple-bike-shopping-site', branch: 'main'
             }
