--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,14 +4,12 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'npm install' 
-                sh 'npm run build' 
+                sh ''' echo "this is a static website" '''
             }
         }
         stage('Test') {
             steps {
-                sh 'npm --version' 
-                sh 'node --version'
+                sh ''' echo "this is static website test phase" '''
             }
         }
         
