--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,12 +4,12 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh ''' echo "this is a static website" '''
+              echo 'this is a static website'
             }
         }
         stage('Test') {
             steps {
-                sh ''' echo "this is static website test phase" '''
+                echo 'this is static website test phase'
             }
         }
         
